--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,3 +19,18 @@ body {
 .profile-container{
   max-width: max-content;
 }
+
+
+
+@media screen and (max-width: 767px) {
+  .projects-container{
+    margin: 20px;
+    width: auto;
+}
+}
+
+.projects-container img{
+  
+      width: 100%;
+      height: 100%;
+}
