--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,3 +34,16 @@ body {
       width: 100%;
       height: 100%;
 }
+
+.alert-container {
+  top: 35%;
+  left: 45%;
+}
+
+@media screen and (max-width: 767px) {
+  
+  .alert-container {
+    top: 25%;
+    left: 25%;
+  }
+}
