--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,7 +26,20 @@ body {
 .header-rigth{
     display: flex;
     justify-content: end;
-  }
+}
+.project-buttons {
+  visibility: hidden;
+}
+.project-button-background{
+  visibility: hidden;
+}
+.project:hover .project-buttons {
+  visibility:visible;
+}
+.project:hover .project-button-background {
+  visibility:visible;
+}
+
 @media screen and (max-width: 767px) {
   
   .alert-container {
@@ -57,3 +70,5 @@ body {
     margin: 0px;
   }
 }/*for mobile devices*/
+
+
