--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,11 +39,13 @@ body {
 .project:hover .project-button-background {
   visibility:visible;
 }
+.education-container{
+  width: 45vw;
+}
 
 @media screen and (max-width: 800px) {
   body{
-    overflow-x: hidden;
-    max-width: 98vw;
+    width: 98vw;
   }
 }
 
@@ -57,6 +59,7 @@ body {
     margin: 20px;
     width: auto;
   }/*gives less margin to component on larger devices*/
+  
 }/*for tablet devices*/
 
 @media screen and (max-width: 576px) {
@@ -72,7 +75,10 @@ body {
   .header-rigth{
     display: flex;
     justify-content: start;
-  }   
+  }
+  .education-container{
+    width: 92vw;
+  }
   .container, .row, .col, .header-container, .profile-container , .projects-container, .readme-container {
     margin: 0px;
   }
